リダイレクト先を相対パスに修正

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </div>
     <div id="user-status"></div>
 
-    <button onclick="window.location='/checkin.html'">チェックイン</button>
-    <button onclick="window.location='/checkout.html'">チェックアウト</button>
+    <button onclick="window.location='./checkin'">チェックイン</button>
+    <button onclick="window.location='./checkout'">チェックアウト</button>
     <script src="index.js"></script>
   </body>
 </html>
