--- a/checkin.html
+++ b/checkin.html
@@ -24,7 +24,7 @@
           .then((data) => console.log(data))
           .catch((error) => console.error("Error:", error))
           .finally(() => {
-            window.location.href = "/";
+            window.location.href = "/../";
           });
       }
 
