--- a/checkout.html
+++ b/checkout.html
@@ -23,7 +23,7 @@
           .then((data) => console.log(data))
           .catch((error) => console.error("Error:", error))
           .finally(() => {
-            window.location.href = "../";
+            window.location.href = "./";
           });
       }
 
