--- a/checkin.html
+++ b/checkin.html
@@ -2,12 +2,17 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    しばらくお待ち下さい...
+    <div class="loading-container">
+      <div class="spinner"></div>
+      <span>入室しています...</span>
+    </div>
     <script>
       function checkIn() {
-        const checkinId = generateRandomString();
+        const checkinId = getCookie("sessionToken") || generateRandomString();
+        console.log(checkinId);
         document.cookie = "sessionToken=" + checkinId + ";path=/";
 
         fetch(
@@ -22,10 +27,12 @@
         )
           .then((response) => response.text())
           .then((data) => console.log(data))
-          .catch((error) => console.error("Error:", error))
-          .finally(() => {
-            window.location.href = "./";
-          });
+          .catch((error) => console.error("Error:", error));
+
+        // 結果を待たずにリダイレクトする
+        setTimeout(() => {
+          window.location.href = "./";
+        }, 500);
       }
 
       function generateRandomString() {
@@ -33,6 +40,12 @@
           Math.random().toString(36).substring(2, 15) +
           Math.random().toString(36).substring(2, 15)
         );
+      }
+
+      function getCookie(name) {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) return parts.pop().split(";").shift();
       }
 
       // ページがロードされたらチェックイン処理を実行
