--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>部室チェックインシステム</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Faviconの追加 -->
+    <link rel="icon" href="public/favicon.ico" />
   </head>
   <body>
-    <div id="counter-display">
-      <span id="counter">読み込み中...</span>
+    <!-- ロゴ画像の表示 -->
+    <div class="logo-container">
+      <img src="public/dicelogo.png" alt="Dice Logo" class="logo" />
+    </div>
+
+    <div id="counter-display" class="loading-container">
+      <div class="spinner"></div>
+      <span id="counter"></span>
     </div>
     <div id="user-status"></div>
 
-    <button onclick="window.location='./checkin'">チェックイン</button>
-    <button onclick="window.location='./checkout'">チェックアウト</button>
+    <button onclick="window.location='./checkin'">入室する</button>
+    <button onclick="window.location='./checkout'">退室する</button>
     <script src="index.js"></script>
   </body>
 </html>
