--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
       <img src="public/dicelogo.png" alt="Dice Logo" class="logo" />
     </div>
 
-    <div id="counter-display" class="loading-container">
+    <div class="loading-container">
       <div class="spinner"></div>
+      読み込み中...
+    </div>
+    <div id="counter-display">
       <span id="counter"></span>
     </div>
     <div id="user-status"></div>
