--- a/checkout.html
+++ b/checkout.html
@@ -29,9 +29,7 @@
           .catch((error) => console.error("Error:", error));
 
         // 結果を待たずにリダイレクトする
-        setTimeout(() => {
-          window.location.href = "./";
-        }, 1000);
+        window.location.href = "./?action=checkout";
       }
 
       function getCookie(name) {
