--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <title>DICE - Clubroom Monitor</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Faviconの追加 -->
+    <link rel="icon" href="public/favicon.ico" />
   </head>
   <body>
     <div class="loading-container">
