--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>部室チェックインシステム</title>
+    <title>DICE - Clubroom Monitor</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Faviconの追加 -->
     <link rel="icon" href="public/favicon.ico" />
