--- a/checkin.html
+++ b/checkin.html
@@ -32,8 +32,10 @@
           .then((data) => console.log(data))
           .catch((error) => console.error("Error:", error));
 
-        // 結果を待たずにリダイレクトする
-        window.location.href = "./?action=checkin";
+        setTimeout(() => {
+          // 結果を待たずにリダイレクトする
+          window.location.href = "./?action=checkout";
+        }, 50);
       }
 
       function generateRandomString() {
