--- a/checkout.html
+++ b/checkout.html
@@ -31,8 +31,10 @@
           .then((data) => console.log(data))
           .catch((error) => console.error("Error:", error));
 
-        // 結果を待たずにリダイレクトする
-        window.location.href = "./?action=checkout";
+        setTimeout(() => {
+          // 結果を待たずにリダイレクトする
+          window.location.href = "./?action=checkout";
+        }, 50);
       }
 
       function getCookie(name) {
