チェックイン時の表示を修正

--- a/checkin.html
+++ b/checkin.html
@@ -34,7 +34,7 @@
 
         setTimeout(() => {
           // 結果を待たずにリダイレクトする
-          window.location.href = "./?action=checkout";
+          window.location.href = "./?action=checkin";
         }, 50);
       }
 
